All classes that user the JCpg php communicator now store the error messages they receive in this seperate log file
Added a error handler that writes all error messages return by the API to a seperate log file
Added help menu which loads help.html
Fixed nullpointer exception when deleting stuff when there was never an album selected for viewing
The picture selector's height is now bigger so thumbs are fully shown
When exiting mega explorer view, thus viewing one single picture, the upper scrollpane now shows all pictures in one row. This is much handier to select other pictures. When going back into mega explorer view, the pictures are again shown in several rows
JCpg now supports multiple users and builds gseperate allery and delete parameter files for each user
Solved null pointer exception while getting an album from the server when syncing
Added thread to JCpgAddPictureManager and JCpgSyncer to correctly display the JCpgProgressManager
Moved the save and load delete parameters code from JCpgUI to JCpgGallerySaver
Fixed bug in sync code where components added to 'root' where not correctly fetched from the server
Fixed bug in sync code where albums where not correctly fetched from the server
Added some constraints so that the "User Galleries" category can not be edited or deleted
Changed tree structure: there's a root node with in it the "User Galleries" category that can only contain albums
Added new menu: add user
Did complete code structure and comments check
Fixed bug in allowed Extensions Filter where, if the config was not allowing 'ALL' extensions, JCpg wasn't using the ones found in the config
Fixed bug where a 'removecategory' was generated when deleting a picture
When uploading pictures, binary picture data is now sent along in the parameter string
Delete parameters are now stored in a file so the can be loaded later on when not executed before closing JCpg
Fixed nullpointer when trying to go into albumview when an album does not have pictures